Finalised layout of webpage and modified search bar behaviour.
Search bar now responds to enter key, and de-focuses after enter press.

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -50,7 +50,7 @@
   display: flex;
   flex-flow: wrap row;
   justify-content: space-evenly;
-  align-items: baseline; /*Most important style-impacting setting*/
+  align-items: center; /*Most important style-impacting setting*/
   row-gap: 10px;
 }
 
